@@ -1,4 +1,5 @@
 version 1.2.2+
+	* Use `bottle` instead of `web.py` for webstatus subcommand
 	* Add `jug_execute` function
 	* Add timing functionality
 
